Fixed the visibility problem when tags were selected in the tag-select dropdowns.

--- a/toolkit/themes/pinstripe/global/autocomplete.css
+++ b/toolkit/themes/pinstripe/global/autocomplete.css
@@ -121,7 +121,7 @@ treechildren.autocomplete-treebody::-moz-tree-row(selected) {
 }
 
 treechildren.autocomplete-treebody::-moz-tree-cell-text(selected) {
-  color: #FFFFFF !important;
+  color: #000000 !important;
 }
 
 /* ::::: textboxes inside toolbarpaletteitems ::::: */
